fix(home): improve address readability by splitting into two lines

--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -116,13 +116,13 @@
 
                     .house-name {
                         font-size: 18px;
+                        width: calc(100% + 15px);
                     }
 
                     .home-address {
                         width: calc(100% + 15px);
 
                         .text {
-                            padding-top: 2px;
                             font-size: 14px;
                         }
                     }
@@ -300,7 +300,7 @@
             .item {
                 min-width: 100%;
                 max-width: 100%;
-                height: 417px;
+                height: 432px;
 
                 .item-image {
                     height: 240px;
@@ -311,6 +311,7 @@
 
                     .house-name {
                         font-size: 20px;
+                        width: calc(100% + 20px);
                     }
 
                     .home-address {
@@ -511,13 +512,6 @@
 
             .item {
                 .item-details {
-                    .home-address {
-                        .text {
-                            padding-top: 3px;
-                            font-size: 12px;
-                        }
-                    }
-
                     .price-container {
                         .house-price {
                             font-size: 16px;
@@ -573,13 +567,6 @@
         .items {
             .item {
                 .item-details {
-                    .home-address {
-                        .text {
-                            padding-top: 2px;
-                            font-size: 14px;
-                        }
-                    }
-
                     .price-container {
                         .house-price {
                             font-size: 18px;
